--- a/.github/workflows/render_and_publish.yml
+++ b/.github/workflows/render_and_publish.yml
@@ -28,7 +28,7 @@ jobs:
           tinytex: true 
           # uncomment below and fill to pin a version
           # version: 0.9.600
-      - run: quarto add template mccarthy-m-g/quarto-lcars-theme
+      # - run: quarto add template mccarthy-m-g/quarto-lcars-theme
       
       # add software dependencies here
 
