--- a/.github/workflows/render_and_publish.yml
+++ b/.github/workflows/render_and_publish.yml
@@ -21,20 +21,20 @@ jobs:
       # - name: Install packages (needed for Rmd)
         # run: Rscript -e 'install.packages(c("rmarkdown", "knitr", "jsonlite"))'
       
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.x'
-      - name: Install Python dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+      # - name: Set up Python
+        # uses: actions/setup-python@v4
+        # with:
+          # python-version: '3.x'
+      # - name: Install Python dependencies
+        # run: |
+          # python -m pip install --upgrade pip
+          # pip install -r requirements.txt
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-        with:
+        # with:
           # To install LaTeX to build PDF book 
-          tinytex: true 
+          # tinytex: true 
           # uncomment below and fill to pin a version
           # version: 0.9.600
       # - run: quarto add template mccarthy-m-g/quarto-lcars-theme
