--- a/_quarto.yml
+++ b/_quarto.yml
@@ -25,7 +25,7 @@ website:
         text: Ensino
       - href: orientacoes.qmd
         text: Orientações
-      - href: compositions.qmd
+      - href: https://github.com/HugoCarvalhoUFRJ/music
         text: Music compositions
       # - href: blog.qmd
       #   text: Blog
